# stlenc

./: .gitignore  README.md  anchor_set_generation.py  anchor_set_no_diff_1024_dim.pickle  encoder.py  eval.py  eval_new.py  orig_utils.py  phis_generator.py  pyproject.toml  resume_train.py  run.sh  setup.py  train-dummyloss.py  train-finalloss.py  train-lossv2.py  train.py  utils.py
datapreproc/: analyze_formulas.py  augment.py  generate_and_push.py  merge_datasets.py  perturb.py
efficient-benchmarks/: benchmark_main.py  kernel_worker.py  stl_kernel.py  tokenize_utils.py  transformer_worker.py  utils_measure.py
results_speedup/: benchmark_bag_bag_final.csv  benchmark_final_cold_vram.csv  benchmark_final_decoupled.csv  benchmark_final_separated.csv  benchmark_pairwise_final.csv  semantic_speedup_complete.csv  speedup_batch_results.csv  speedup_full_vs_forward.csv  speedup_vs_N_samples_batch.csv
slurm_outputs/: decoder-cls-v2.out  ds-train.out  ds.out  extract.out  speedup-v2.out  speedup-v3.out  speedup.out  temp_0.05_37572.out  temp_0.05_37759.out  temp_0.05_37761.out  temp_0.09_37784.out  temp_0.09_37788.out  temp_0.1_37434.out  temp_0.1_37437.out  temp_0.1_37444.out  temp_0.1_37568.out  temp_0.2_37571.out  temp_0.3_37573.out  temp_0.3_37743.out  train-arch-temp0.3.out  train-decoder-new.out  train-encoder-cls.out  train-encoder-mean.out  train-encoder-meanp.out  train-gem-temp0.3.out  train-mod-temp0.1.out  train-mod-temp0.3-highres.out  train-mod-temp0.3.out  train-mod-temp0.5.out  train-new-temp0.4.out  train-new.out  train-notemp-new.out  train-pazza-v2.out  train-pazza.out  train1-new.out  train3-new.out  train4-new.out  train_34194.out  train_34195.out  train_34375.out  (+24 more)
src/: config.json  data.py  generate_data.py  orig_utils.py  (+4 more)
stlenc.egg-info/: PKG-INFO  SOURCES.txt  pyproject.toml  requires.txt
(+20 files in other folders)
