[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stlenc"
requires-python = ">= 3.10"
version = "2025.0.1"
description = "STL Encoder (Signal Temporal Logic)"
authors = [
    { name = "Sara Candussio", email = "sara.candussio@phd.units.it" }
]
readme = "README.md"  # Add your README file here
dependencies = [
    "torch>=1.8.0",
    "numpy>=1.20.0",
    "pandas>=1.1.0",
    "matplotlib>=3.0",
    "scikit-learn>=0.24.0",
    "networkx>=2.5"
]


